--- a/Css/about.css
+++ b/Css/about.css
@@ -1,21 +1,35 @@
 body{
-	background:url(../img/5.jpg) no-repeat;
-	background-size: cover;
+	background:url(../img/5.gif) no-repeat;
+	 background-attachment: fixed;
+	background-size: 500px,500px;
+	 background-position: 400px 150px; 
 	 height: 100%;
-
+	 align-items: center;
 	 }
+
 	 
 content {
 	display: inline-block;
-	margin: 40px 0px 0px 400px;
-	background: red;
-	
+	width:600px;
+	height: 500px;
+	margin: 3% 0% 0% 25%;
+	background: black;
+	color: white;
+	font-family: 'Indie Flower', cursive;
+	font-size: 150%;
+	font-weight: bold;
+	opacity: 0.85;
 	text-align: center;
-
+	box-shadow: 7px 7px 7px black;
+	border-radius: 15px;
 }
 
 
 	 .picture{
 	 	height: 100px; width: 100px;
 	 }
-	
+	.labout{
+	background:white;
+}
+.labout li{
+	color:black;
