--- a/Css/header&nav_css.css
+++ b/Css/header&nav_css.css
@@ -5,7 +5,7 @@ body
 header
 	{
 	
-	margin: 0; padding: 0px;
+	margin-bottom: 10px; padding: 0px;
 	display: flex;
 	justify-content: space-between;
 	width: 100%;
@@ -13,6 +13,7 @@ header
 	position: fixed;
 	box-shadow: 0px 1px 5px black ; 
 	background:url(../img/3.jpg)
+	 
 	}
 
 .logo
@@ -20,12 +21,17 @@ header
 	width:50px; height :50px;
    margin:15px 0px 10px 10px;
     border-radius: 50px;
+    transition: transform .3s;
+    }
+ .logo:hover{
+   transform: rotate(360deg);
     }
 
 .nav ul{
 	display: flex;
 		justify-content: space-between;
 		margin:25px 0px 0px 10px;
+		
 	}
 .nav ul a {
 	list-style: none; color: black; text-align: center; padding: 3px; border-radius: 3px; 
@@ -42,7 +48,7 @@ header
 	color: black;
 }
 .nav ul a:active{
-	background:##484C4D;
+	background:#484C4D;
 	color: white;
 
 }
@@ -50,7 +56,7 @@ header
 .header{
 	color: white;
 	font-family: 'Itim', cursive;
-	margin: 0; padding: 0;
+	margin: -3px; padding: 0;
 	
 }
 @media screen and (max-width: 600px) {
