--- a/Css/home_css.css
+++ b/Css/home_css.css
@@ -1,5 +1,5 @@
 body{
-	background:url(../img/4.jpg) no-repeat;
+	background:url(../img/8.jpg) no-repeat;
 	background-size: cover;
 	
 	 height: 100%;
@@ -26,6 +26,7 @@ body{
 .icnlogo{
 	height: 100px;
 	width: 100px;
+	transition: transform .4s;
 
 }
 .lhome{
@@ -36,5 +37,5 @@ body{
 }
 .icnlogo:hover{
      
-	transform: scale(1.5, 1.5);
+	transform: scale(1.3, 1.3);
 }
