--- a/Css/header&nav_css.css
+++ b/Css/header&nav_css.css
@@ -12,8 +12,8 @@ header
 	top:0;
 	position: fixed;
 	box-shadow: 0px 1px 5px black ; 
-	background:url(../img/3.jpg)
-	 
+	background:url(../img/3.jpg);
+	z-index: 10;
 	}
 
 .logo
