--- a/Css/cv.css
+++ b/Css/cv.css
@@ -8,7 +8,7 @@ body{
 	 content{
 	 	display: flex;
 	 	margin: 6% 0% 0% 14%;
-	 	
+	 	font-family: 'Bitter', serif;
 	 	opacity: 0.85;
 	 	
 	 }
@@ -17,9 +17,9 @@ body{
 	 	line-height: 2;
 	 }
 	 .pic{
-	 	width: 100px;
-	 	height:100px;
-	 	margin-left: 150px;
+	 	width: 200px;
+	 	height:200px;
+	 	margin-left: 100px;
 	 }
 	 .name{
 	 	margin-left: 125px;
