--- a/Css/Contact.css
+++ b/Css/Contact.css
@@ -3,15 +3,41 @@ body{
 	background-size: cover;
 	height: 100%;
 	 }
-	 .info{
-	 	width:90%;
-	 	height:600px;
+
+content{
+	display: inline-block;
+	width:100%;
+	height: 800px;
+	 	
 	 	background: black;
 	 opacity: 0.85;
-	 margin:100px 5% 0% 5% ;	 
+	 margin:60px 0% 0% 0% ;	 
+	 
+	 font-family: 'Itim', cursive;
+	 	font-weight: bold;
+	 	font-size: 150%;
+}
+	 content ul{
+	 	display: flex;
+	 	justify-content: space-around;
+		 	
 	}
+	.heading{
+		color: white;
+		text-align: center;
+	}
+	.info{
+		color: white;
+		
+		line-height: 2;
+		font-family: 'Itim', cursive;
+	 	font-weight: bold;
+	 	font-size: 100%;
+	}
+	
+	
 	 .map{
-	 	opacity: 0.85;
+	 	width: 49%;
 	 }
 
 	 
