--- a/Css/about.css
+++ b/Css/about.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Bitter');
 body{
 	background:url(../img/5.gif) no-repeat;
 	 background-attachment: fixed;
@@ -10,23 +11,22 @@ body{
 	 
 content {
 	display: inline-block;
-	width:600px;
-	height: 800px;
-	margin: 3% 0% 0% 25%;
+	width:100%;
+	height: 900px;
+	margin: 60px 0 0 0;
 	background: black;
 	color: white;
-	font-family: 'Indie Flower', cursive;
-	font-size: 150%;
-	font-weight: bold;
-	opacity: 0.85;
+	font-family: 'Itim', cursive;
+	 font-weight: bold;
+	 font-size: 150%;
+	opacity: 0.95;
 	text-align: center;
-	box-shadow: 7px 7px 7px black;
-	border-radius: 15px;
+	
 }
 
 
 	 .picture{
-	 	height: 100px; width: 100px;
+	 	height: 254px; width: 207px;
 	 }
 	.labout{
 	background:white;
