--- a/Css/index.css
+++ b/Css/index.css
@@ -1,13 +1,15 @@
 body{
 	background:url(../img/8.jpg) no-repeat;
 	background-size: cover;
-	
-	 height: 100%;
+	overflow-x:hidden;
 	 }
 
 
-.content_box{
-	margin:200px 40px 20px 40px;
+content {
+	display: inline-block;
+	width: 100%;
+	height: 540px;
+	margin:100px 0px 0px 0px;
 	color: white; text-align: center;
 	font-family: 'Indie Flower', cursive;
 	font-size: 150%;
@@ -15,14 +17,19 @@ body{
 	padding: 2px;
 
 }
-.icons
+.icons ul
 {
-	
+	list-style-type: none;
 	display: flex;
 	justify-content: space-around;
 	margin-left: 350px;
 	margin-right: 350px;
 }
+.icons ul li a{
+	color: white;
+	text-decoration: none;
+}
+
 .icnlogo{
 	height: 100px;
 	width: 100px;
