--- a/Css/Contact.css
+++ b/Css/Contact.css
@@ -7,7 +7,7 @@ body{
 content{
 	display: inline-block;
 	width:100%;
-	height: 800px;
+	height: 900px;
 	 	
 	 	background: black;
 	 opacity: 0.85;
@@ -15,7 +15,7 @@ content{
 	 
 	 font-family: 'Itim', cursive;
 	 	font-weight: bold;
-	 	font-size: 150%;
+	 font-size: calc(0.5vw + 18px);
 }
 	 content ul{
 	 	display: flex;
@@ -29,15 +29,45 @@ content{
 	.info{
 		color: white;
 		
-		line-height: 2;
+		line-height: 1.5;
 		font-family: 'Itim', cursive;
 	 	font-weight: bold;
 	 	font-size: 100%;
 	}
-	
+
+    
 	
 	 .map{
+	 	color: white;
 	 	width: 49%;
 	 }
+	 .lcontact{
+	background:white;
+}
+.lcontact li{
+	color:black;}
+
+	 @media screen and (max-width: 600px) {
+	content ul{flex-direction: column; width: 100%;}
+	content{margin-top: 150px; height: 1500px;}
+	.googlemap {
+        position: relative;
+        padding-bottom: 125%; 
+        height: 300px;
+        overflow: hidden;
+        width: 500px;
+        margin-left: -40px; 
+       
+    }
+    .googlemap iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100% ;
+        height: 100% ;}
+        body{overflow-x:hidden;}
+
+}
+
 
 	 
