--- a/Css/about.css
+++ b/Css/about.css
@@ -6,19 +6,20 @@ body{
 	 background-position: 400px 150px; 
 	 height: 100%;
 	 align-items: center;
+	 overflow-x:hidden;
 	 }
 
 	 
 content {
 	display: inline-block;
 	width:100%;
-	height: 900px;
+	height: 1010px;
 	margin: 60px 0 0 0;
 	background: black;
 	color: white;
 	font-family: 'Itim', cursive;
 	 font-weight: bold;
-	 font-size: 150%;
+	font-size: calc(0.5vw + 18px);
 	opacity: 0.95;
 	text-align: center;
 	
@@ -32,4 +33,8 @@ content {
 	background:white;
 }
 .labout li{
-	color:black;
+	color:black;}
+	@media screen and (max-width: 600px) {
+	.picture{ height:127px; width :104px; }
+	content{height: 750px; }
+}
