--- a/Css/index.css
+++ b/Css/index.css
@@ -12,7 +12,7 @@ content {
 	margin:100px 0px 0px 0px;
 	color: white; text-align: center;
 	font-family: 'Indie Flower', cursive;
-	font-size: 150%;
+	font-size: calc(0.5vw + 18px);
 	font-weight: bold;
 	padding: 2px;
 
@@ -45,4 +45,9 @@ content {
 .icnlogo:hover{
      
 	transform: scale(1.3, 1.3);
+}
+@media screen and (max-width: 600px) {
+	.icons ul{flex-direction: column; width: 100%; width: 100%; margin: 20px 0px 0px -35px;}
+    .icnlogo{ height: 50px; width: 50px; }
+    content{height: 100%;margin-top: 150px; align-items: center;}
 }
