--- a/Css/Contact.css
+++ b/Css/Contact.css
@@ -4,17 +4,16 @@ body{
 	height: 100%;
 	 }
 
+
 content{
 	display: inline-block;
+	height: 100%;
 	width:100%;
-	height: 900px;
-	 	
-	 	background: black;
+	 background: black;
 	 opacity: 0.85;
-	 margin:60px 0% 0% 0% ;	 
-	 
+	 margin:60px 0px 0px 0px ;	  
 	 font-family: 'Itim', cursive;
-	 	font-weight: bold;
+	 font-weight: bold;
 	 font-size: calc(0.5vw + 18px);
 }
 	 content ul{
@@ -32,7 +31,7 @@ content{
 		line-height: 1.5;
 		font-family: 'Itim', cursive;
 	 	font-weight: bold;
-	 	font-size: 100%;
+	 	font-size: calc(0.5vw + 18px);
 	}
 
     
@@ -47,18 +46,17 @@ content{
 .lcontact li{
 	color:black;}
 
-	 @media screen and (max-width: 600px) {
+	 @media screen and (max-width: 350px) {
 	content ul{flex-direction: column; width: 100%;}
-	content{margin-top: 150px; height: 1500px;}
+	content{margin-top: 150px;}
 	.googlemap {
-        position: relative;
-        padding-bottom: 125%; 
+        position: relative;/*making position relative*/
+        padding-bottom: 125%; /*adjusting the ratio after the screen shrinks*/
         height: 300px;
         overflow: hidden;
         width: 500px;
-        margin-left: -40px; 
-       
-    }
+        margin-left: -40px;   /*idea taken from "https://www.ostraining.com/blog/coding/responsive-google-maps/"*/     
+    } 
     .googlemap iframe {
         position: absolute;
         top: 0;
