--- a/Css/about.css
+++ b/Css/about.css
@@ -2,18 +2,18 @@
 body{
 	background:url(../img/5.gif) no-repeat;
 	 background-attachment: fixed;
-	background-size: 500px,500px;
-	 background-position: 400px 150px; 
+	background-size: 500px,500px;/*setting background image size*/
+	 background-position: 400px 150px; /*setting position*/
 	 height: 100%;
 	 align-items: center;
 	 overflow-x:hidden;
 	 }
 
 	 
-content {
+content {/*adjusting the content element*/
 	display: inline-block;
 	width:100%;
-	height: 1010px;
+	height: 100%;
 	margin: 60px 0 0 0;
 	background: black;
 	color: white;
@@ -32,9 +32,9 @@ content {
 	.labout{
 	background:white;
 }
-.labout li{
+.labout li{/*Making the website responsive*/
 	color:black;}
-	@media screen and (max-width: 600px) {
+	@media screen and (max-width: 350px) {
 	.picture{ height:127px; width :104px; }
 	content{height: 750px; }
 }
