--- a/Css/index.css
+++ b/Css/index.css
@@ -1,23 +1,24 @@
 body{
-	background:url(../img/8.jpg) no-repeat;
-	background-size: cover;
-	overflow-x:hidden;
+	background:url(../img/8.jpg) no-repeat;/*seting background image*/
+	background-size: cover;/*making background cover so it dowsn't move while scrolling*/
+	overflow-x:hidden;/*prevents from a sdditional sidebar pooping due to some reason*/
 	 }
 
 
-content {
-	display: inline-block;
-	width: 100%;
+content {/*css of content*/
+	display: inline-block;/*display type is inline-block means blocked element*/
+	width: 100%;/*adjusting the layout of content*/
 	height: 540px;
+	padding: 2px;
 	margin:100px 0px 0px 0px;
 	color: white; text-align: center;
 	font-family: 'Indie Flower', cursive;
 	font-size: calc(0.5vw + 18px);
 	font-weight: bold;
-	padding: 2px;
+	
 
 }
-.icons ul
+.icons ul/*displaying icons in row*/
 {
 	list-style-type: none;
 	display: flex;
@@ -25,7 +26,7 @@ content {
 	margin-left: 350px;
 	margin-right: 350px;
 }
-.icons ul li a{
+.icons ul li a{/*removing link style text from the icons*/
 	color: white;
 	text-decoration: none;
 }
@@ -33,19 +34,21 @@ content {
 .icnlogo{
 	height: 100px;
 	width: 100px;
-	transition: transform .4s;
+	transition: transform .3s;/*putting transistion in icons*/
 
 }
 .lhome{
-	background:white;
+	background:white;/*setting white background and black text to "home" button 
+	while in this page and this goes same accordingly for all pages*/
 }
 .lhome li{
 	color:black;
 }
 .icnlogo:hover{
      
-	transform: scale(1.3, 1.3);
+	transform: scale(1.3, 1.3);/*icon size increases while hovering*/
 }
+/*making the webpage responsive*/
 @media screen and (max-width: 600px) {
 	.icons ul{flex-direction: column; width: 100%; width: 100%; margin: 20px 0px 0px -35px;}
     .icnlogo{ height: 50px; width: 50px; }
