--- a/Css/social.css
+++ b/Css/social.css
@@ -1,5 +1,5 @@
 
-body{
+html,body{
 	background:url(../img/8.gif) no-repeat;
 	background-attachment: fixed;
 	background-size: 500px,500px;
@@ -11,7 +11,7 @@ body{
 	 	margin-top: 60px;
 	 	background: black;
 	 	opacity: 0.85;
-	 	height: 600px;
+	 	height: 100%;
 	 	width: 100%;
 	 	color: white;
 	 	text-align: center; 	
@@ -24,7 +24,7 @@ body{
 
 	 }
 	 content ul{ 
-	 	
+	 	/*putting the icons in row */
 	 	display: flex;
 	 	justify-content: space-around;
 	 	list-style-type: none;
@@ -41,19 +41,19 @@ body{
 	 		 	
 	 }
 	 
-	 .pic img{
+	 .pic img{/*putting transistion on transform*/
 	 	transition: transform .3s;
 	 }
-	 .pic img:hover{
+	 .pic img:hover{/*rotates the ball when hovered*/
 	 	transform: rotate(360deg) scale(1.3);
 	 	
 	 }
 	 .lsocial{
 	background:white;
 	}
-	.lsocial li{
+	.lsocial li{/*making responsive design*/
 	color:black;}
-	 @media screen and (max-width: 600px) {
+	 @media screen and (max-width: 350px) {
 	content{margin-top: 150px;}
 	content ul{margin-left: -40px;}
 }
